Fixed alignment

--- a/quattro.css
+++ b/quattro.css
@@ -490,11 +490,11 @@ html[data-theme=light] {
 	color: 					var(--cl-iron);
 }
 
-*:is(#main-content-container, #right-sidebar, .tippy-tooltip, .ls-card) .block-children {
-	border-left: 			1px solid var(--cl-silver);
+.block-children-left-border {
+	background-color: 		var(--cl-silver);
 }
-.dark-theme *:is(*:is(#main-content-container, #right-sidebar, .tippy-tooltip, .ls-card) .block-children), html[data-theme=dark] *:is(*:is(#main-content-container, #right-sidebar, .tippy-tooltip, .ls-card) .block-children) {
-	border-left: 			1px solid var(--cl-nero);
+.dark-theme .block-children-left-border,  html[data-theme=dark] .block-children-left-border {
+	background-color: 		var(--cl-nero);
 }
 
 *:is(#main-content-container, #right-sidebar, .tippy-tooltip, .ls-card) blockquote {
@@ -3767,4 +3767,8 @@ html {
 
 .text-sm {
 	font-size: 1rem;
+}
+
+.blocks-container .items-baseline {
+	align-items: self-end;
 }
